--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ChatGPT中文版免费下载和使用指南，包含6种无需翻墙的可靠方法，帮助您在中国访问OpenAI的ChatGPT AI模型。">
     <meta name="keywords" content="ChatGPT, ChatGPT中文版, 聊天GPT, ChatGPT国内, AI语言模型, GPT-4o, 人工智能助手">
-    <title>【2025年4月】ChatGPT中文版免费下载使用指南，无需翻墙 | OpenAI AI助手</title>
+    <title>【2025年5月】ChatGPT中文版免费下载使用指南，无需翻墙 | OpenAI AI助手</title>
     <style>
         :root {
             --primary-color: #6366f1;
@@ -246,8 +246,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>【2025年4月】ChatGPT中文版免费下载使用指南</h1>
-            <div class="update-date">更新日期：2025-04-25</div>
+            <h1>【2025年5月】ChatGPT中文版免费下载使用指南</h1>
+            <div class="update-date">更新日期：2025-05-19</div>
             <p>6种无需翻墙的方法帮助您在国内免费使用OpenAI的ChatGPT中文版</p>
         </header>
         
@@ -302,14 +302,14 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><strong><a href="https://chat.yixiaai.com" target="_blank">一下AI</a></strong></td>
+                                <td><strong><a href="https://xsimplechat.com" target="_blank">一下AI</a></strong></td>
                                 <td>支持Claude 3.7 Sonnet、GPT 4o绘画、AI PPT、GPT-4.0、GPT-4.1 & mini、GPT-o1、GPT-o3、Gemini 2.5 Pro、Grok-3、DeepSeek r1 满血版、AI PPT、DeepSeek V3 0324、AI 翻译、联网查询等功能</td>
-                                <td><a href="https://chat.yixiaai.com" target="_blank" class="button">点击访问</a></td>
+                                <td><a href="https://xsimplechat.com" target="_blank" class="button">点击访问</a></td>
                             </tr>
                             <tr>
-                                <td><strong><a href="https://chat.chatgpt-chinese.com/" target="_blank">蓝鲸AI</a></strong></td>
+                                <td><strong><a href="chat.lanjing.pro/" target="_blank">蓝鲸AI</a></strong></td>
                                 <td>ChatGPT中文版、GPT-4o、Claude，界面简洁高效</td>
-                                <td><a href="https://chat.chatgpt-chinese.com/" target="_blank" class="button">点击访问</a></td>
+                                <td><a href="https://chat.lanjing.pro/" target="_blank" class="button">点击访问</a></td>
                             </tr>
                             <tr>
                                 <td><strong><a href="https://deepseek-free.org/" target="_blank">智惠聚合AI</a></strong></td>
@@ -349,8 +349,6 @@
                         <div class="method-number">3</div>
                         <h3>下载国内AI工具客户端</h3>
                     </div>
-                    <p>对于需要更稳定体验的用户，可以尝试下载国内开发的AI工具客户端，内置ChatGPT中文版功能。</p>
-                    <p>推荐客户端：<a href="https://chatknow.lify.vip/software/AI%E6%99%BA%E6%85%A7%E5%B2%9B_1.0.0_x64_zh-CN.msi" target="_blank">智惠岛AI客户端</a>。</p>
                     <div class="pros">
                         <div class="pros-title">优点：</div>
                         <ul>
@@ -366,7 +364,7 @@
                         <h3>通过Edge浏览器插件快速使用ChatGPT</h3>
                     </div>
                     <p>如果您习惯使用浏览器，可以安装支持ChatGPT中文版的Microsoft Edge插件，随时随地调用AI功能。</p>
-                    <p>推荐插件：<a href="https://microsoftedge.microsoft.com/addons/detail/chatgpt%E4%B8%AD%E6%96%87%E7%89%88%EF%BC%88%E4%B8%AD%E6%96%87%E7%95%8C%E9%9D%A2%E3%80%81%E5%AF%B lanciato对话%E3%80%81%E5%86%99%E4%BD%9C%E3%80%81%E7%BB%98%E7%94%BB/lmlenkgcieicbnpobkhmpcgmamahahil" target="_blank">ChatGPT中文版插件</a>。</p>
+                    <p>推荐插件：<a href="xsimplechat.com" target="_blank">ChatGPT中文版插件</a>。</p>
                     <div class="pros">
                         <div class="pros-title">优点：</div>
                         <ul>
@@ -458,7 +456,7 @@
         </main>
         
         <footer>
-            <p>最后更新: 2025-04-25 | ChatGPT中文版, OpenAI, 聊天GPT使用指南</p>
+            <p>最后更新: 2025-05-19 | ChatGPT中文版, OpenAI, 聊天GPT使用指南</p>
             <p>本文仅供参考，请遵守相关法律法规使用AI工具</p>
         </footer>
     </div>
