--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ChatGPT中文版免费下载和使用指南，包含6种无需翻墙的可靠方法，帮助您在中国访问OpenAI的ChatGPT AI模型。">
     <meta name="keywords" content="ChatGPT, ChatGPT中文版, 聊天GPT, ChatGPT国内, AI语言模型, GPT-4o, 人工智能助手">
-    <title>【2025年8月】ChatGPT中文版免费下载使用指南，无需翻墙 | OpenAI AI助手</title>
+    <title>【2025年9月】ChatGPT中文版免费下载使用指南，无需翻墙 | OpenAI AI助手</title>
     <style>
         :root {
             --primary-color: #6366f1;
@@ -246,8 +246,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>【2025年8月】ChatGPT中文版免费下载使用指南</h1>
-            <div class="update-date">更新日期：2025-08-18</div>
+            <h1>【2025年9月】ChatGPT中文版免费下载使用指南</h1>
+            <div class="update-date">更新日期：2025-09-19</div>
             <p>6种无需翻墙的方法帮助您在国内免费使用OpenAI的ChatGPT中文版</p>
         </header>
         
@@ -303,13 +303,13 @@
                         <tbody>
                             <tr>
                                 <td><strong><a href="https://xsimplechat.com" target="_blank">一下AI</a></strong></td>
-                                <td>支持Claude 3.7 Sonnet、GPT 4o绘画、AI PPT、GPT-4.0、GPT-4.1 & mini、GPT-o1、GPT-o3、Gemini 2.5 Pro、Grok-3、DeepSeek r1 满血版、AI PPT、DeepSeek V3 0324、AI 翻译、联网查询等功能</td>
+                                <td>支持Claude 4 Sonnet、GPT 4o绘画、AI PPT、GPT-4.0、GPT-4.1 & mini、GPT-o1、GPT-o3、Gemini 2.5 Pro、Grok-3、DeepSeek r1 满血版、AI PPT、DeepSeek V3 0324、AI 翻译、联网查询等功能</td>
                                 <td><a href="https://xsimplechat.com" target="_blank" class="button">点击访问</a></td>
                             </tr>
                             <tr>
-                                <td><strong><a href="chat.lanjing.pro/" target="_blank">蓝鲸AI</a></strong></td>
+                                <td><strong><a href="ai.lanjingai.org/" target="_blank">蓝鲸AI</a></strong></td>
                                 <td>ChatGPT中文版、GPT-4o、Claude，界面简洁高效</td>
-                                <td><a href="https://chat.lanjing.pro/" target="_blank" class="button">点击访问</a></td>
+                                <td><a href="https://ai.lanjingai.org/" target="_blank" class="button">点击访问</a></td>
                             </tr>
                             <tr>
                                 <td><strong><a href="https://deepseek-free.org/" target="_blank">智惠聚合AI</a></strong></td>
@@ -456,7 +456,7 @@
         </main>
         
         <footer>
-            <p>最后更新: 2025-08-18 | ChatGPT中文版, OpenAI, 聊天GPT使用指南</p>
+            <p>最后更新: 2025-09-19 | ChatGPT中文版, OpenAI, 聊天GPT使用指南</p>
             <p>本文仅供参考，请遵守相关法律法规使用AI工具</p>
         </footer>
     </div>
